GC Dental/src/objects/Goal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Achieved_Quantity_Goal__c</fullName>
        <label>Achieved Quantity Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Revenue__c</fullName>
        <label>Achieved Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregated_Achieved_Quantity__c</fullName>
        <label>Aggregated Achieved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregated_Achieved_Revenue__c</fullName>
        <label>Aggregated Achieved Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Goal Line Items</relationshipLabel>
        <relationshipName>Goal_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Quantity_in__c</fullName>
        <label>Product Quantity in</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Goal Line Items</relationshipLabel>
        <relationshipName>Goal_Line_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Goal__c</fullName>
        <label>Quantity Goal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Goal__c</fullName>
        <label>Revenue Goal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <label>UniqueName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Goal Line Item</label>
    <nameField>
        <label>Goal Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>